--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,17 @@
 
-/* * {
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
-  background: #637d63;
+  background: #e3eeed;
 }
 
 .App {
   font-family: sans-serif;
   text-align: center;
-} */
+}
 
 .form {
   max-width: 330px;
